<resources>
    <string name="app_name">בית אריאן לב</string>
    <string name="title_activity_login_dialog">Sign in</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string-array name="nav_drawer_items">
        <item>בית</item>
        <item>חברי קהילה</item>
        <item>מאמרים</item>
        <item>אירועים</item>
        <item>בקרוב</item>
        <item>אודות</item>
    </string-array>
    <string name="about_title">אודות בית אריאן לב</string>
    <string name="error_server_request">השרת אינו זמין כרגע. אנא נסה במועד מאוחר יותר</string>
    <string name="progress_dialog_title">מחזיר מידע...</string>
    <string name="progress_dialog_message">בבקשה המתן...</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_menu_bar">menuBarActivity</string>
    <string name="login_error_dialog_title">התחברות נכשלה</string>
    <string name="login_error_dialog_message">שם המשתמש או הסיסמא אינם נכונים.</string>
    <string name="login_error_dialog_ok">נסה שנית</string>
    <string name="login_error_dialog_abort">יציאה</string>
    <string name="login_error_abort">בחרת לבטל את ההתחברות</string>
    <string name="login_user_name_label">שם משתמש</string>
    <string name="login_user_password_label">סיסמא</string>
    <string name="login_log_btn">התחבר</string>
    <string name="login_cancel_log_btn">ביטול</string>
    <string name="login_register_label">הירשם</string>
    <string name="member_profile_full_name">שם מלא:</string>
    <string name="member_profile_birth_date">תאריך לידה:</string>
    <string name="member_profile_email_address">דואר אלקטרוני:</string>
    <string name="member_profile_gender">מגדר:</string>
    <string name="member_profile_Phone_number">מספר טלפון:</string>
    <string name="member_profile_address">כתובת:</string>
    <string name="member_profile_join_date">תאריך הצטרפות:</string>
    <string name="member_profile_status">סטטוס:</string>
    <string name="member_profile_end_subscription_date">תאריך סיום מנוי:</string>
    <string name="member_profile_btn_edit">עריכה</string>
    <string name="article_comment_success_message">התגובה נוספה בהצלחה</string>
    <string name="article_comment_error_message">שליחת התגובה נכשלה, אנא נסה שנית</string>
    <string name="article_uploading_comment_progress_dialog_title">שולח תגובה...</string>
    <string name="article_uploading_comment_progress_dialog_message">בבקשה המתן...</string>
    <string name="article_add_new_article_successfully_submit_form">המאמר נוסף בהצלחה</string>
    <string name="article_add_new_article_error_submit_form">הוספת המאמר נכשלה, אנא נסה מאוחר יותר</string>
    <string name="article_remove_article_successfully">המאמר נמחק בהצלחה</string>
    <string name="article_remove_article_error">מחיקת המאמר נכשלה, אנא נסה מאוחר יותר</string>
    <string name="article_remove_dialog_title">אשר מחיקת מאמר</string>
    <string name="article_remove_dialog_message">אתה בטוח שברצונך למחוק מאמר זה?</string>
    <string name="article_remove_dialog_ok">מחק</string>
    <string name="article_remove_dialog_abort">בטל מחיקה</string>
    <string name="article_remove_abort_message">מחיקת המאמר בוטלה</string>
    <string name="article_input_headline">כותרת</string>
    <string name="article_input_content">תגובה</string>
    <string name="article_btn_send_comment">שלח</string>
    <string name="article_btn_remove_article">מחק מאמר</string>
    <string name="article_previous_comments">תגובות קודמות:</string>
    <string name="article_list_search_filter">חפש מאמר...</string>
    <string name="article_list_author_name">שם המחבר:</string>
    <string name="article_list_publish_date">מועד פרסום:</string>
    <string name="article_list_comments_number">תגובות:</string>
    <string name="article_list_views_number">צפיות:</string>
    <string name="article_add_new_article_headline_label">הכנס כותרת</string>
    <string name="article_add_new_article_content_label">הכנס תוכן</string>
    <string name="article_add_new_article_btn">הוסף מאמר</string>
    <string name="article_add_new_article_cancel_btn">ביטול</string>
    <string name="event_no_gallery_picture_found">"לא נמצאו תמונות מאירוע זה"</string>
    <string name="evernt_watch_gallery">כניסה לגלריה</string>
    <string name="event_add_new_event_successfully_submit_form">האירוע נוסף בהצלחה</string>
    <string name="event_add_new_event_error_submit_form">הוספת האירוע נכשלה, אנא נסה מאוחר יותר</string>
    <string name="event_edit_event_successfully_submit_form">האירוע נערך בהצלחה</string>
    <string name="event_edit_event_error_submit_form">עריכת האירוע נכשלה, אנא נסה מאוחר יותר</string>
    <string name="event_remove_event_successfully">האירוע נמחק בהצלחה</string>
    <string name="event_remove_event_error">מחיקת האירוע נכשלה, אנה נסה מאוחר יותר</string>
    <string name="event_remove_progress_dialog_title">מסיר נתונים...</string>
    <string name="event_remove_progress_dialog_message">בבקשה המתן...</string>
    <string name="event_date_picker_title">בחר את תאריך האירוע</string>
    <string name="event_time_picker_title">בחר שעה</string>
    <string name="event_error_validation_alert_dialog_title">שדות חסרים</string>
    <string name="event_error_validation_must_fill_all_fields">יש למלא את כל שדות החובה!</string>
    <string name="event_remove_dialog_title">אשר מחיקת אירוע</string>
    <string name="event_remove_dialog_message">אתה בטוח שברצונך למחוק אירוע זה?</string>
    <string name="event_remove_dialog_ok">מחק</string>
    <string name="event_remove_dialog_abort">בטל מחיקה</string>
    <string name="event_remove_abort_message">מחיקת האירוע בוטלה</string>
    <string name="event_date_of_event_label">מועד האירוע:</string>
    <string name="event_location_label">מיקום האירוע:</string>
    <string name="event_number_of_members_label">מספר משתתפים:</string>
    <string name="event_posting_member_label">מפרסם האירוע:</string>
    <string name="event_description_label">תיאור האירוע:</string>
    <string name="event_images_label">תמונות:</string>
    <string name="event_remove_btn">מחק אירוע זה</string>
    <string name="event_add_new_event_title_label">נושא</string>
    <string name="event_add_new_event_choose_date_label">בחר תאריך</string>
    <string name="event_add_new_event_choose_time_label">בחר שעה</string>
    <string name="event_add_new_event_city_label">עיר</string>
    <string name="event_add_new_event_street_label">רחוב</string>
    <string name="event_add_new_event_house_number_label">מספר בית</string>
    <string name="event_add_new_event_participate_number_label">כמות משתתפים:</string>
    <string name="event_add_new_event_descrription_label">תיאור האירוע</string>
    <string name="event_add_new_event_add_btn">שלח</string>
    <string name="event_add_new_event_cancel_btn">ביטול</string>
    <string name="event_edit_location_hint_label">הכנס מיקום רחוב מספר, עיר</string>
    <string name="event_edit_btn">ערוך אירוע</string>
    <string name="ui_register_user">"בחר תמונת פרופיל"</string>
    <string name="ui_profile_photo_picker_title">"בחר תמונת פרופיל"</string>
    <string name="ui_register_user_name">הכנס שם משתמש</string>
    <string name="ui_register_password">הכנס סיסמא</string>
    <string name="ui_register_password_confirmation">אימות סיסמא</string>
    <string name="ui_register_email_address">הכנס כתובת אימייל</string>
    <string name="ui_register_first_name">שם פרטי</string>
    <string name="ui_register_last_name">שם משפחה</string>
    <string name="ui_register_birth_date">בחר תאריך לידה</string>
    <string name="ui_register_phone_number">הכנס מספר טלפון</string>
    <string name="ui_register_add_confirm">אפשר קבלת מידע פרסומי ועידכונים</string>
    <string name="ui_register_phone_privacy">פרטי</string>
    <string name="ui_register_btn_cancel">ביטול</string>
    <string name="ui_register_choose_image">בחר תמונה</string>
    <string name="ui_register_phone_type_mobile">נייד</string>
    <string name="ui_register_phone_type_office">משרד</string>
    <string name="ui_register_phone_type_home">בית</string>
    <string name="ui_register_btn_submit_form">שלח טופס</string>
    <string name="ui_register_successfully_submit_form">הפרטים נשלחו בהצלחה</string>
    <string name="ui_register_error_submit_form">שליחת הפרטים נכשלה, אנא נסה מאוחר יותר</string>
    <string name="ui_register_progress_dialog_title">שולח...</string>
    <string name="ui_register_progress_dialog_message">בבקשה המתן...</string>
    <string name="ui_register_date_picker_title">בחר תאריך לידה</string>
    <string name="ui_register_date_picker_ok">אישור</string>
    <string name="ui_register_date_picker_cancel">ביטול</string>
    <string name="error_validation_hebrew">שדה זה מקבל אותיות בעיברית בלבד!</string>
    <string name="error_validation_maile">כתובת מייל לא תקינה</string>
    <string name="error_validation_numbers">שדה זה מקבל מספרים בלבד</string>
    <string name="error_validation_age_over_18">אתה חייב להיות מעל גיל 18 כדי להרשם!</string>
    <string name="error_validation_must_fill_all_fields">יש למלא את כל שדות החובה!</string>
    <string name="error_validation_user_name">שם המשתמש יכול להכיל אתיות באנגלית וספרות בלבד, 4-12 תווים.</string>
    <string name="error_validation_password">סיסמא יכולה להכיל אתיות באנגלית ומספרים בלבד, 5-12 תווים.</string>
    <string name="error_validation_password_confirmation">הסיסמא אינה תואמת!</string>
    <string name="error_validation_phone">מספר אינו תקין!</string>
    <string name="error_validation_alert_dialog_message">לא ניתן להמשיך בפעולה, קיים לפחות שדה אחד שאינו תקין!</string>
    <string name="error_validation_alert_dialog_title">שדות לא תקינים</string>
    <string name="error_validation_alert_dialog_ok">חזור</string>
    <string name="error_validation_uploading_image_message">העלאת התמונה נכשלה, באפשרותך להמשיך או לצאת ולנסות מאוחר יותר.</string>
    <string name="error_validation_uploading_image_title">העלאת תמונה נכשלה</string>
    <string name="error_validation_uploading_image_btn_ok">המשך</string>
    <string name="error_validation_uploading_image_btn_no">ביטול</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_list_item_icon">Item Icon</string>
</resources>