<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="app.projectortalapplication.viewComponents.EventFragment"
    android:textDirection="rtl"
    android:weightSum="1"
    android:background="@drawable/off_white"
    android:layoutDirection="rtl"
    android:layout_weight="1">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtEventTitle"
                android:layout_weight="0.05"
                android:gravity="center_vertical"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layoutDirection="rtl">

                <TextView
                    android:text="@string/event_date_of_event_label"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:id="@+id/textView8"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:paddingRight="5dp" />

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/txtDateTime"
                    android:gravity="center_vertical" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layoutDirection="rtl">

                <TextView
                    android:text="@string/event_location_label"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:id="@+id/textView11"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:paddingRight="5dp" />

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/txtLocation"
                    android:gravity="center_vertical" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/marker_24dp"
                    android:id="@+id/imageView6"
                    android:layoutDirection="rtl"
                    android:layout_gravity="right" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layoutDirection="rtl">

                <TextView
                    android:text="@string/event_number_of_members_label"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:id="@+id/textView15"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:paddingRight="5dp" />

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/txtMembesNumber"
                    android:gravity="center_vertical" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layoutDirection="rtl">

                <TextView
                    android:text="@string/event_posting_member_label"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:id="@+id/textView17"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:paddingRight="5dp" />

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/txtPublisher"
                    android:gravity="center_vertical" />

            </LinearLayout>

            <TextView
                android:text="@string/event_description_label"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:id="@+id/textView6"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:paddingRight="5dp" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtDescription"
                android:gravity="top|start"
                android:paddingRight="5dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/event_images_label"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:id="@+id/textView10"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" />

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/txtGalleryPics"
                    android:gravity="center_vertical"
                    android:paddingLeft="8dp" />

                <TextView
                    android:text="@string/evernt_watch_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/btnWatch"
                    android:layout_weight="1"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textStyle="normal|bold"
                    android:gravity="center_vertical"
                    android:visibility="invisible" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:id="@+id/adminEventSet">

        <Button
            android:text="@string/event_edit_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btnEditEvent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="18sp" />

        <Button
            android:text="@string/event_remove_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btnRemoveEvent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="18sp"
            android:visibility="visible" />
    </LinearLayout>

</LinearLayout>
